Expanding upon the OpenGL migration to ECS system.